syncdoc/tests/roundtrip/snapshots/highlight/roundtrip__helpers__docs_highlight.md.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
Syntax highlighting for displaying source code with visual distinction between language elements.
