syncdoc/tests/roundtrip/snapshots/highlight/roundtrip__helpers__docs_highlight_highlight_line_with_extension.md.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
Highlight a single line with syntax coloring for a given file extension.

Falls back to plain text rendering if syntax highlighting fails.
