syncdoc/tests/roundtrip/snapshots/highlight/roundtrip__helpers__docs_highlight_highlight_source_lines.md.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
Highlight source lines with syntax coloring.

# Panics

Panics if syntax highlighting fails for any line in the input.
